tests/baselines/reference/privateNamesAndMethods.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts(26,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts (1 errors) ====
    class A {
        #foo(a: number) {}
        async #bar(a: number) {}
        async *#baz(a: number) {
            return 3;
        }
        #_quux: number;
        get #quux (): number {
            return this.#_quux;
        }
        set #quux (val: number) {
            this.#_quux = val; 
        }
        constructor () {
            this.#foo(30);
            this.#bar(30);
            this.#baz(30);
            this.#quux = this.#quux + 1;
            this.#quux++;
     }
    }
    
    class B extends A {
        #foo(a: string) {}
        constructor () {
            super();
            ~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.
            this.#foo("str");
        }
    }
    